Adjust fix navigation z-index

--- a/assets/scss/navigation.scss
+++ b/assets/scss/navigation.scss
@@ -93,7 +93,7 @@
   top: -90px;
   margin-top: 0;
   background-color: $primary-blue;
-  z-index: 1;
+  z-index: 16;
 
   &.show {
     top: 0;
