--- a/main.css
+++ b/main.css
@@ -176,7 +176,7 @@
   top: -90px;
   margin-top: 0;
   background-color: #08afe4;
-  z-index: 1; }
+  z-index: 16; }
   #NavbarTopFixed.show {
     top: 0;
     -webkit-animation-delay: 0;
